--- a/Index.html
+++ b/Index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="bn">
-<head>
+<head><meta name="google-site-verification" content="J84I4H7_fGyT013VwoN2TED5bdtK1yYaAtY3xSzQNcU" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Royal English Academy</title>
