--- a/Index.html
+++ b/Index.html
@@ -2,9 +2,7 @@
 <html lang="bn">
 <head>
     <head>
-    <meta name="google-site-verification" content="your-verification-code" />
-    <title>Royal English Academy</title>
-    <link rel="stylesheet" href="style.css">
+    <meta name="google-site-verification" content="J84I4H7_fGyT013VwoN2TED5bdtK1yYaAtY3xSzQNcU" />
     </head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
