--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Royal English Academy</title>
     <link rel="stylesheet" href="style.css">
-</head>
+</head><head>
     <title>Royal English Academy - ইংরেজি শেখার সেরা প্ল্যাটফর্ম</title>
     <meta name="description" content="Royal English Academy থেকে সহজ পদ্ধতিতে ইংরেজি শেখো। ফ্রি রিসোর্স, কোর্স ও PDF নাও!">
     <meta name="keywords" content="ইংরেজি শেখা, Spoken English, ইংলিশ গ্রামার, ইংরেজি কোর্স, Royal English Academy">
     <meta name="author" content="Safinur Alam">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
