--- a/index.html
+++ b/index.html
@@ -1,37 +1,56 @@
 <!DOCTYPE html>
 <html lang="bn">
-<head><meta name="google-site-verification" content="J84I4H7_fGyT013VwoN2TED5bdtK1yYaAtY3xSzQNcU" />
+<head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Royal English Academy</title>
+    <title>Royal English Academy - সহজ উপায়ে ইংরেজি শিখুন</title>
     <link rel="stylesheet" href="style.css">
-</head><head>
-    <title>Royal English Academy - ইংরেজি শেখার সেরা প্ল্যাটফর্ম</title>
-    <meta name="description" content="Royal English Academy থেকে সহজ পদ্ধতিতে ইংরেজি শেখো। ফ্রি রিসোর্স, কোর্স ও PDF নাও!">
-    <meta name="keywords" content="ইংরেজি শেখা, Spoken English, ইংলিশ গ্রামার, ইংরেজি কোর্স, Royal English Academy">
-    <meta name="author" content="Safinur Alam">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
+    <!-- ✅ Header Section -->
     <header>
-        <h1>Royal English Academy</h1>
         <nav>
             <ul>
-                <li><a href="#">হোম</a></li>
-                <li><a href="#">কোর্স</a></li>
-                <li><a href="#">যোগাযোগ</a></li>
+                <li><a href="index.html">🏠 হোম</a></li>
+                <li><a href="courses.html">📚 কোর্স</a></li>
+                <li><a href="about.html">ℹ️ আমাদের সম্পর্কে</a></li>
+                <li><a href="features.html">✨ আমাদের বৈশিষ্ট্য</a></li>
+                <li><a href="goals.html">🎯 আমাদের লক্ষ্য</a></li>
+                <li><a href="why-choose-us.html">🤔 কেন আমাদের সাথে শিখবেন?</a></li>
+                <li><a href="testimonials.html">💬 শিক্ষার্থীদের রিভিউ</a></li>
+                <li><a href="contact.html">📞 যোগাযোগ</a></li>
             </ul>
         </nav>
     </header>
-    
+
+    <!-- ✅ Hero Section -->
     <section class="hero">
-        <h2>ইংরেজি শিখুন সহজভাবে!</h2>
-        <p>আমাদের কোর্সে জয়েন করুন এবং ইংরেজিতে দক্ষ হন।</p>
-        <a href="#" class="btn">কোর্স দেখুন</a>
+        <h1>স্বাগতম Royal English Academy-তে!</h1>
+        <p>ইংরেজি শেখার সহজ ও কার্যকরী উপায়</p>
+        <a href="courses.html" class="btn">📚 কোর্স দেখুন</a>
     </section>
 
+    <!-- ✅ Features Section -->
+    <section class="features">
+        <h2>আমাদের বৈশিষ্ট্য</h2>
+        <ul>
+            <li>✔️ অভিজ্ঞ প্রশিক্ষক</li>
+            <li>✔️ লাইভ ক্লাস ও রেকর্ডিং</li>
+            <li>✔️ ইন্টারেক্টিভ লার্নিং</li>
+            <li>✔️ সাপোর্ট ও গাইডলাইন</li>
+        </ul>
+        <a href="features.html" class="btn">✨ বিস্তারিত দেখুন</a>
+    </section>
+
+    <!-- ✅ Footer -->
     <footer>
         <p>&copy; ২০২৫ Royal English Academy | সর্বস্বত্ব সংরক্ষিত</p>
+        <div class="social-links">
+            <a href="https://www.facebook.com/wishsafinur" target="_blank">Facebook</a> |
+            <a href="https://youtube.com/@royalenglishacademy7?si=oIfwEjZrrMBJSaJP" target="_blank">YouTube</a> |
+            <a href="https://www.instagram.com/wishsafinur?igsh=MWw3cGhscW9pazRzMg==" target="_blank">Instagram</a>
+        </div>
     </footer>
+
 </body>
 </html>
